# hr-dashboard

./: .gitignore  CLAUDE.md  DUAL_COMPARISON_GUIDE.md  EMAIL_IMPLEMENTATION_COMPLETE.md  FILE_UPLOAD_API.md  FILE_UPLOAD_SYSTEM_UPDATE.md  HRIS_SECURITY_AUDIT_REPORT.md  MARKET_DATA_GUIDE.md  NOTIFICATION_QUICK_START.md  OFFBOARDING_PROCESS.md  QUICK_START_FILE_UPLOADS.md  README.md  REVIEW-REPORT.md  SECURITY_AUDIT_REPORT.md  TESTING_SUMMARY.md  frontend_logs.txt  hr-dashboard.code-workspace  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
backend/: .env.example  .pylintrc  DEDUCTION_LISTING_IMPLEMENTATION.md  EMAIL_SYSTEM_SUMMARY.md  FMLA_IMPLEMENTATION_COMPLETE.md  NOTIFICATIONS_README.md  PAYROLL_IMPLEMENTATION_STATUS.md  PAYROLL_SYSTEM_STATUS.md  backend_logs.txt  fmla_form_fields.json  migrate_users_to_rbac.py  pyproject.toml  requirements.txt  send_test_email.py  test_deduction_listing.py  test_email_templates.py  test_file_processing.py  test_fmla_api.py
backend/.claude/: settings.local.json
backend/app/: main.py
backend/app/api/: aca.py  analytics 2.py  analytics.py  annual_increase.py  applicant_pool.py  approval_chains.py  (+50 more)
backend/scripts/: add_contribution_subtasks.py  create_fmla_notice.py  create_fmla_tables.py  embed_logo.py  inspect_fmla_form.py  manage_fmla_notices.py  send_test_email.py
backend/tests/: test_approval_binding.py  test_checkbox_values.py  test_deduction_listing.py  test_email_templates.py  test_file_processing.py  test_fmla_api.py  test_fmla_form_generation.py  test_portal_binding.py
(+610 files in other folders)
