[tool.pylint]
init-hook = 'import sys; sys.path.append(".")'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 120

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
